--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -15,23 +15,27 @@
         <img src="./law.png" alt="" height="45" width="50" />
         <a class="navbar-brand" href="./index.html">LAW NOTES</a>
         
-        <div class="dropdown">
+        <!-- <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fa fa-bars"></i>
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="../Law Notes/Law Notes.html">Law Notes</a></li>
-              <li><a class="dropdown-item" href="../PIR/PIR.html">Public Interest Reads(PIR)</a></li>
-              <li><a class="dropdown-item" href="../Legal inshorts/Legal inshorts.html">Legal inshorts</a></li>
-              <li><a class="dropdown-item" href="../Key Judgement/Key Judgement.html">Key Judgements</a></li>
-              <li><a class="dropdown-item" href="../Audilaw/Audilaw.html">Audilaw</a></li>
-              <li><a class="dropdown-item" href="../PR/PR.html">Pictorial representations &raquo; </a>
+              <li><a class="dropdown-item" href="./Pages/Law Notes/Law Notes.html">Law Notes</a></li>
+              <li><a class="dropdown-item" href="./Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
+              <li><a class="dropdown-item" href="./Pages/Legal inshorts/Legal inshorts.html">Legal inshorts</a></li>
+              <li><a class="dropdown-item" href="./Pages/Key Judgement/Key Judgement.html">Key Judgements</a></li>
+              <li><a class="dropdown-item" href="./Pages/Audilaw/Audilaw.html">Audilaw</a></li>
+              <li><a class="dropdown-item" href="./Pages/PR/PR.html">Pictorial representations &raquo; </a>
                 <ul class="dropdown-menu dropdown-submenu">
-                  <li><a class="dropdown-item" href="../Mindmaps/Mindmaps.html">Mindmaps</a></li>
-                  <li><a class="dropdown-item" href="../Lawcom/Lawcom.html">Lawcomic</a></li>
+                  <li><a class="dropdown-item" href="./Pages/Mindmaps/Mindmaps.html">Mindmaps</a></li>
+                  <li><a class="dropdown-item" href="./Pages/Lawcom/Lawcom.html">Lawcomic</a></li>
                 </ul>
               </li>
             </ul>
+        </div> -->
+        <div class="bg-light d-flex justify-content-between" id="heading">
+          <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Law Notes</a></li>
+          <li><a class="text-decoration-none" href="./Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
         </div>
     </nav>
 </body>
