--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <img src="./law.png" alt="" height="45" width="50" />
-        <a class="navbar-brand" href="./index.html">ONE STOP LAW</a>
+        <a class="navbar-brand" href="./index.html">LAW MELON</a>
         
-        <div class="dropdown">
+        <!-- <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fa fa-bars"></i>
             </button>
@@ -32,6 +32,10 @@
                 </ul>
               </li>
             </ul>
+        </div> -->
+        <div class="bg-light d-flex justify-content-between" id="heading">
+          <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Law Notes</a></li>
+          <li><a class="text-decoration-none" href="./Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
         </div>
     </nav>
 </body>
