--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -12,7 +12,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <img src="./law.png" alt="" height="45" width="50" />
+      <img src="./icon1.png" alt="" height="50" width="50" />
         <a class="navbar-brand" href="./index.html">LAW NOTES</a>
         
         <!-- <div class="dropdown">
@@ -34,8 +34,8 @@
             </ul>
         </div> -->
         <div class="bg-light d-flex justify-content-between" id="heading">
-          <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Law Notes</a></li>
-          <li><a class="text-decoration-none" href="./Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
+          <li><a class="text-decoration-none" href="./Law Notes.html">Law Notes</a></li>
+          <li><a class="text-decoration-none" href="/Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
         </div>
     </nav>
 </body>
