Added: Law Notes, About Us, index

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
-    <title>ONE STOP LAW</title>
+    <title>LAWMELON</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <img src="./icon1.png" alt="" height="50" width="50" />
+        <a href="./index.html"><img src="./icon1.png" alt="" height="50" width="50" /></a>
         <a class="navbar-brand" href="./index.html">LAW MELON</a>
         
         <!-- <div class="dropdown">
@@ -34,9 +34,31 @@
             </ul>
         </div> -->
         <div class="bg-light d-flex justify-content-between" id="heading">
+          <li><a class="text-decoration-none" href="./Pages/About Us/aboutus.html">About Us</a></li>
+          <!-- <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="lawnotes">
+              Law Notes
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Conventions</a></li>
+              <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Doctrines</a></li>
+            </ul>
+          </div> -->
           <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Law Notes</a></li>
           <li><a class="text-decoration-none" href="./Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
         </div>
     </nav>
+    <div class="contact-info">
+      <h2>Contact Information</h2>
+      <p>Name: lawmelon</p>
+      <p>Email: lawmelon.@gmail.com</p>
+      <p>Phone: +919677199371/+919019722404</p>
+
+      <div class="contact-links">
+          <a href="mailto:lawmelon@gmail.com">Email</a>
+          <a href="tel:+919677199371/+919019722404">Call</a>
+      </div>
+  </div>
+    <h3></h3>
 </body>
 </html>
