--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -12,8 +12,8 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <img src="./icon1.png" alt="" height="50" width="50" />
-        <a class="navbar-brand" href="./index.html">PUBLIC INTEREST READS</a>
+      <a href="/index.html"><img src="./icon1.png" alt="" height="50" width="50" /></a>
+        <a class="navbar-brand" href="./PIR.html">Public Interest Reads</a>
         
         <!-- <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
