--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="./Pages/Law Notes/Law Notes.html">Law Notes</a></li>
               <li><a class="dropdown-item" href="./Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
-              <li><a class="dropdown-item" href="./Pages/Legal inshorts/Legal inshorts.html">Legal inshorts</a></li>
+              <li><a class="dropdown-item" h`ref="./Pages/Legal inshorts/Legal inshorts.html">Legal inshorts</a></li>
               <li><a class="dropdown-item" href="./Pages/Key Judgement/Key Judgement.html">Key Judgements</a></li>
               <li><a class="dropdown-item" href="./Pages/Audilaw/Audilaw.html">Audilaw</a></li>
               <li><a class="dropdown-item" href="./Pages/PR/PR.html">Pictorial representations &raquo; </a>
@@ -51,13 +51,16 @@
     <div class="contact-info">
       <h2>Contact Information</h2>
       <p>Name: lawmelon</p>
-      <p>Email: lawmelon.@gmail.com</p>
+      <p>Email: Lawmelon.@gmail.com</p>
       <p>Phone: +919677199371/+919019722404</p>
 
       <div class="contact-links">
-          <a href="mailto:lawmelon@gmail.com">Email</a>
+          <a href="mailto:Lawmelon@gmail.com">Email</a>
           <a href="tel:+919677199371/+919019722404">Call</a>
       </div>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-youtube"></i>
+      <i class="fa-solid fa-envelope"></i>
   </div>
     <h3></h3>
 </body>
