--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -38,6 +38,7 @@
           <li><a class="text-decoration-none" href="/Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
         </div>
     </nav>
+    <h1>CONVENTIONS</h1>
     <h3>MADRID PROTOCOL:- A ROUTE TO GLOBAL BRANDING</h3>
     <p>
       Overall, TRIPS plays a vital role in promoting and protecting intellectual property rights globally. 
