--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link rel="stylesheet" href="./style.css">
     <title>LAWMELON</title>
 </head>
@@ -58,9 +60,9 @@
           <a href="mailto:Lawmelon@gmail.com">Email</a>
           <a href="tel:+919677199371/+919019722404">Call</a>
       </div>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-youtube"></i>
-      <i class="fa-solid fa-envelope"></i>
+      <a href="https://www.instagram.com/lawmelon23/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.youtube.com/channel/UChnAhXHEQC1WWwUVyuYXIgw"><i class="fa-brands fa-youtube"></i></a>
+      <a href="mailto:Lawmelon@gmail.com"><i class="fa-solid fa-envelope"></i></a>
   </div>
     <h3></h3>
 </body>
