--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
         </div>
     </nav>
     <div class="contact-info">
+      <p></p>
+      <h4>About lawmelon</h4>
+      <p></p>
+      <p>
+        Lawmelon is an online legal domain that provides a hassle free and  insightful experience to people from 
+        the legal fraternity and to public. It is the duty of every citizen to know the law of the land in order 
+        to claim their rights. This online platform seeks to provide a one stop destination to all law related queries. 
+        All the articles will be a five minute read with mind maps and pictorial representations for the readers to understand 
+        the vast contents of law in an easy understandable, memorable and less time consuming manner. All the contents provided 
+        in this online learning platform will be a concise yet catchy study. 
+      </p>
+      
       <h2>Contact Information</h2>
       <p>Name: lawmelon</p>
       <p>Email: Lawmelon.@gmail.com</p>
