--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
       
       <h2>Contact Information</h2>
-      <p>Name: lawmelon</p>
+      <p>We are here to connect with you drop us an email! call us! follow us online!!!</p>
       <p>Email: Lawmelon.@gmail.com</p>
       <p>Phone: +919677199371/+919019722404</p>
 
