--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a href="mailto:Lawmelon@gmail.com">Email</a>
           <a href="tel:+919677199371/+919019722404">Call</a>
       </div>
-      <a href="https://www.instagram.com/lawmelon23/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.instagram.com/lawmelon/"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://www.youtube.com/channel/UChnAhXHEQC1WWwUVyuYXIgw"><i class="fa-brands fa-youtube"></i></a>
       <a href="mailto:Lawmelon@gmail.com"><i class="fa-solid fa-envelope"></i></a>
   </div>
