--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -457,7 +457,7 @@
     <img src="BERNE.png" class="berne">
     <br></br>  
     <p></p>
-    <h1>IPR DOCTRINES</h1>> 
+    <h1>IPR DOCTRINES</h1>
     <p></p>
     <h4>DOCTRINE OF TACKING</h4>
     <p></p>
