added:law notes

--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -499,6 +499,46 @@
     <p>
       In Brookfield Communications,Inc.v.West Coast Entertainment Corporation, 174 F.3d at 1036, the standard to be considered for tacking purposes has been set as exceedingly strict and narrow.
     </p>
+    <p></p>
+    <h4>DOCTRINE OF FUNCTIONALITY</h4>
+    <p></p>
+    <p>
+      The functionality doctrine is a rule in trademark law which states that 
+      functional product features cannot serve as a trademark. A product feature is 
+      considered functional if it is essential to the use or purpose of the product or if it 
+      affects the cost or quality of the product. It prohibits registration of functional 
+      product features and is intended to encourage legitimate competition by 
+      maintaining a proper balance between trademark law and patent law. 
+    </p>
+    <p></p>
+    <p>
+      Valu Engineering, Inc. v. Rexnord Corp., 278 F.3d 1268 (Fed. Cir. 2002): The 
+      court decided that certain conveyor belt shapes were functional due to their 
+      increased performance over alternative designs and were therefore not eligible 
+      to be considered a trademark.
+    </p>
+    <p></p>
+    <p>
+      Qualitex Co. v. Jacobson Prods. Co, 514 U.S. 159 : The supreme court 
+      explained that the functionality doctrine seeks to promote legitimate 
+      competition by allowing a producer to control a useful product feature. It is the 
+      province of patent law, not trademark law, to encourage invention by granting 
+      inventors a monopoly over new product designs or functions for a limited time. 
+      If a product’s functional features could be used as trademarks, however, a 
+      monopoly over such features could be obtained without regard to whether they 
+      qualify as patents and could be extended forever (because trademarks may be 
+      renewed in perpetuity). 
+    </p>
+    <p></p>
+    <p>
+      In Traffix Devices, Inc. v. Mktg. Displays, Inc., 532 U.S. 23 (2001), the 
+      Supreme Court reiterated this rationale, also noting that the functionality 
+      doctrine is not affected by evidence of acquired distinctiveness. Thus, even 
+      when the evidence establishes that consumers have come to associate a 
+      functional product feature with a single source, trademark protection will not be 
+      granted in light of the public policy reasons stated.
+    </p>
+
 
     
        
