--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -538,6 +538,86 @@
       functional product feature with a single source, trademark protection will not be 
       granted in light of the public policy reasons stated.
     </p>
+    <br></br>
+    <h4>DOCTRINE OF AESTHETIC FUNCTIONALITY</h4>
+    <p></p>
+    <p>
+      When goods are bought largely for their aesthetic value, their features may be 
+      functional because they definitely contribute to that value and thus aid the 
+      performance of an object for which the goods are intended. The doctrine has 
+      since evolved to deny trademark protection to design features that make a 
+      product more aesthetically pleasing or commercially desirable, serve no sourceidentifying function, 
+      and are necessary for competition.
+    </p>
+    <p></p>
+    <p>
+      Aesthetic functionality has also been used, in certain circumstances, to foreclose 
+      liability for infringement for uses of designs that are merely aesthetically 
+      functional and not source-identifying The doctrine of aesthetic functionality is 
+      applied when protection would put competitors at a significant non-reputationrelated 
+      disadvantage if they were precluded from using the same feature.
+    </p>
+    <p></p>
+    <p>
+      A trademark is aesthetically functional, and therefore ineligible for protection 
+      when protection of the mark significantly undermines competitor’s ability to 
+      compete in the relevant market. The “functionality doctrine” prevents product 
+      manufacturers from protecting specific features of a product using trademark 
+      law. (Functionality can be protected under patent law, but not under trademark 
+      law.)
+    </p>
+    <p></p>
+    <p>
+      Courts will consider the following factors when determining utilitarian 
+      functionality: 
+    </p>
+    <p></p>
+    <ul>
+      <li>Whether a feature is essential to the use or purpose of the product </li>
+      <li>Whether a feature affects the cost or quality of the product </li>
+      <li>Whether granting of trademark for the exclusive use of the feature would put 
+          competitors at a significant non-reputation-related disadvantage.</li>
+    </ul>
+    <p></p>
+    <p>
+      LTTB LLC v. Redbubble, Inc. (9th Cir. Jan. 20, 2021) In this case, the U.S. 
+      District Court held that the defendant’s use of a trademarked phrase on a shirt 
+      was aesthetically functional because consumers liked the pun in the phrase, not 
+      the trademarked source, so no infringement occurred.
+    </p>
+    <p></p>
+    <br></br>
+    <h4>TERRITORIALITY DOCTRINE</h4>
+    <p></p>
+    <p>
+      The Territoriality principle stipulates that the intellectual property rights do not 
+      extend beyond the territory of the sovereign state which had granted the rights 
+      in the first place. It favors the notion that the reputation of a product or service 
+      is limited to the territory of the country in which that trademark was granted the 
+      status of a well-known trademark. 
+    </p>
+    <p></p>
+    <p>
+      It means that a well-known trademark can only be considered so within the 
+      nation’s territory as its reputation is limited that way. The principle of 
+      territoriality permits states to tailor their national intellectual property laws to 
+      suit their level of technological and economic development. In other words, 
+      pursuant to the principle of territoriality, countries can design their intellectual 
+      property laws in a manner that facilitates the achievement of specific societal 
+      goals.
+    </p>
+    <p></p>
+    <p>
+      In Jones Investment Co. v.Vishnupriya Hosiery Mills (Order 24/2014) IPAB 
+      :The IPAB chose to rule against the complainants, pointing out that since the 
+      said complainant (a foreign MNC) had no intentions of expanding their business 
+      in India and launching their products into the Indian market, an Indian company 
+      could not be halted from using trademarks that were allegedly similar. The 
+      ruling was based on the ground that the countries where Jones Investment Co. 
+      was based or conducted its business were the only ones that could possibly 
+      consider that the said company’s trademark was well-known amongst the 
+      consumers in the country.
+    </p>
 
 
     
