--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -35,6 +35,13 @@
         </div> -->
         <div class="bg-light d-flex justify-content-between" id="heading">
           <li><a class="text-decoration-none" href="./Law Notes.html">Law Notes</a></li>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="lawnotes">
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Copyright</a></li>
+            </ul>
+          </div> 
           <li><a class="text-decoration-none" href="/Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
         </div>
     </nav>
@@ -618,6 +625,7 @@
       consider that the said company’s trademark was well-known amongst the 
       consumers in the country.
     </p>
+    
 
 
     
