--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -20,3 +20,4 @@
             <li><a class="text-decoration-none" href="/Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
           </div>
       </nav>
+      <h1>HISTORY</h1>
