--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -39,7 +39,7 @@
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="lawnotes">
             </button>
             <ul class="dropdown-menu">
-              <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Copyright</a></li>
+              <li><a class="text-decoration-none" href="/Pages/copright.html">Copyright</a></li>
             </ul>
           </div> 
           <li><a class="text-decoration-none" href="/Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
