--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -1,23 +1,54 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./copyright.css">
-    <title>copyright</title>
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a href="/index.html"><img src="./icon1.png" alt="" height="50" width="50" /></a>
-        <a class="navbar-brand" href="./copyright.html">copyright</a>
-        <div class="bg-light d-flex justify-content-between" id="heading">
-            <li><a class="text-decoration-none" href="./Law Notes.html">Law Notes</a></li>
-            <li><a class="text-decoration-none" href="./Pages/Law Notes/Law Notes.html">Copyright</a></li>
-            <li><a class="text-decoration-none" href="/Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
-          </div>
-      </nav>
-      <h1>HISTORY</h1>
+   <h1>HISTORY OF COPYRIGHT</h1>
+   <p></p>
+   <img src="./copyright/history of copyright.png" class="history of copright">
+   <p>
+    The development of copyright law in the United Kingdom may be linked to Johannes Gutenberg’s creation of 
+    the printing press in Germany in 1440. When the printing machine made its way to England in 1483, King Richard III lifted the 
+    restriction on the importation of books and manuscripts. The Stationer’s Guild was established in 1529 to control the printing industry 
+    when authors started bringing their works to England for printing. In 1516, King Henry VII instituted a privilege system that gave guild 
+    members the only authority to reproduce materials.
+   </p>
+   <p></p>
+   <p>
+    In order to protect English publishers and printers, King Henry I forbade the importation of books and stationery in 1533. 
+    After obtaining a royal charter in 1557, the Stationer’s Company was given the power to control the book trade. The idea of copyright was created 
+    by the Licencing Act of 1661, which gave Stationer’s Company members the freedom to publish. The 1662 statute gave the organisation the authority to prosecute copyright violations. 
+    But because the Licencing Act could not sufficiently handle mechanical and intellectual theft, it was finally abolished in 1681.
+   </p>
+   <p></p>
+   <p>
+    Authors’ rights were recognised by the world’s first copyright law, the Statute of Anne, which went into effect on April 10, 1710, and completely changed the field of copyright law. 
+    Its primary objectives were to safeguard writers against piracy and to encourage study. According to the legislation, writers were granted the only right to print their unpublished writings for a period of 14 years, 
+    with the possibility of an extra 14 years if the author continued to live. Violators would have to pay penalties and lose the infringing books.
+   </p>
+   <p></p>
+   <p>
+    The Berne Convention was put into effect and other measures were combined into the Copyright Act of 1911. It did away with the need for previous registration and increased the copyright's duration to life plus 50 years. 
+    In addition to introducing quick remedies for infringement claims, the legislation protected all forms of art.
+   </p>
+   <p></p>
+   <p>
+    Let’s begin by discussing the development of copyright law in India. In 1847, the East India Company was in power when the country passed its first copyright legislation. The statute gave the author a lifetime plus seven 
+    further years or forty-two years of copyright protection. Also, it empowered the government to issue publication licenses if the copyright owner declined. Following the 1911 English legislation, the Act of 1914 extended copyright protection to all literary and artistic creations.
+   </p>
+   <p></p>
+   <p>
+    The 1911 statute was superseded by the Copyright statute of 1957 upon India’s independence. It created a copyright board to resolve disputes and a copyright office for registration. The measure significantly altered India’s copyright laws.
+   </p>
+   <p></p>
+   <p>
+    In conclusion, copyright law has a convoluted and centuries-long history. The law is always changing to meet new issues as technology advances, particularly when it comes to non-literal works. To reduce subjectivity and appropriately combat copyright infringement, more precise legislation are required.
+   </p>
+   <p></p>
+   <img src="./copyright/history of copyright in india.png" class="history of copright in india">
+</body>
+</html>
