--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -50,5 +50,106 @@
    </p>
    <p></p>
    <img src="./copyright/history of copyright in india.png" class="history of copright in india">
+   <br></br>
+   <p></p>
+   <p>
+    COPYRIGHT OWNERSHIP AND FIRST OWNERSHIP UNDER COPYRIGHT ACT, 1957
+   </p>
+   <p></p>
+   <p>
+    Copyright is a unique legal right that is automatically granted upon the creation of a work. It is closely tied to the creator of the work and differs from trademarks, where the originator might not be known. The author’s role is significant in copyright, mentioned during registration and enforcement.
+   </p>
+   <p></p>
+   <p>
+    First Ownership by Type of Work:
+   </p>
+   <p>
+    1.Literary, Artistic, Dramatic, Musical Work: The author is the initial owner. This includes books, computer software, online content, and public speeches.
+   </p>
+   <p>
+    2. Photograph, Sculpture, Drawing (including architectural drawings), Plan, Engraving: The author is the first owner.
+   </p>
+   <p>
+    3. Cinematographic Work: The producer is the first owner. However, authors of lyrics, music, and dramatic elements in the work retain their rights for other purposes.
+   </p>
+   <p>
+    4. Sound Recording: The producer is the first owner.
+   </p>
+   <p>
+    5. Work Created by Contract: If a person commissions any work through a contract, that person becomes the first owner for the purpose of the contract. The author remains the first owner for all other purposes.
+   </p>
+   <p>
+    6. Work Created by Employee: If a work is created by an employee during employment, the employer is the first owner. Disputes might arise regarding when the work was created "in the course of" employment.
+   </p>
+   <p>
+    7. Work Created by Partner: Work created by a partner during business operations becomes owned by the partnership.
+   </p>
+   <p>
+    8. Work Created under Contract of Service: The person who has instituted the service becomes the first owner. This is similar to an employer-employee relationship with the employer having control.
+   </p>
+   <p>
+    9. Work Created under Contract for Service: The author retains first ownership under this arrangement, given their discretion in creating the work.
+   </p>
+   <p>
+    10. Speech Delivered in Public: The speaker is the first owner, regardless of employment or arrangement by another.
+   </p>
+   <p></p>
+   <p>
+    Importance of Documentation:
+   </p>
+   <p></p>
+   <ul>
+    <li>Written assignments are crucial to transfer copyright ownership from the author.</li>
+    <li>Employment agreements clarify employer ownership.</li>
+    <li>In cinematographic work, consent from actors, composers, lyricists, etc., must be provided.</li>
+   </ul>
+   <p></p>
+   <p>
+    Section 17 of the Copyright Act, 1957 in India is a pivotal piece of legislation that delves into the intricate relationship between authorship and ownership of copyrighted works. 
+    This section outlines the scenarios in which the ownership of copyright deviates from the default principle that the creator (author) of a work is the initial owner of its copyright.
+   </p>
+   <p></p>
+   <p>
+    In essence, Section 17 provides a framework for determining who owns the copyright in various types of creative works when circumstances involve employment, 
+    commissioned work, or certain contractual arrangements. This section allows for the transfer of ownership rights from the creator to another party under specific conditions. 
+    It plays a crucial role in clarifying the intricacies of copyright ownership and authorship, especially in cases where the creation of a work is tied to a business, employer, or commissioned project.
+   </p>
+   <p></p>
+   <p>
+    Section 17 is divided into different clauses, each addressing specific categories of creative works and the situations under which ownership of copyright may be attributed to parties other than the original creators:
+   </p>
+   <p>
+    1. Section 17(a): This clause pertains to literary, dramatic, and artistic works. It states that if an author creates a work during the course of their employment or service to an entity such as a newspaper, magazine, book publisher, etc., 
+    and under a contract that involves publishing such work, the owner of the entity shall be the first owner of the copyright, unless there’s an agreement stating otherwise.
+   </p>
+   <p></p>
+   <p>
+    2. Section 17(b): This clause applies to works like photographs, paintings, engravings, and cinematographic films. It states that if an artist, photographer, or cinematographer is hired to create such a work, the person or entity commissioning 
+    the work shall be the first owner of the copyright, unless there’s an agreement to the contrary.
+   </p>
+   <p></p>
+   <p>
+    3. Section 17(c): Here, the focus is on works created during employment. If a person creates a work during the course of their employment under a contract of service or apprenticeship, the employer shall be the first owner of the copyright, unless otherwise agreed upon.
+   </p>
+   <p></p>
+   <p>
+    4. Section 17(cc): This clause pertains to lectures delivered in public on behalf of someone else. If a person delivers a lecture on behalf of another, the person on whose behalf the lecture is delivered becomes the first owner of the copyright. If the person gives the lecture without representing someone else, they retain authorship and ownership rights.
+   </p>
+   <p></p>
+   <p>
+    5. Section 17(d): It addresses works made at the instance of or under a government. If a work is created in response to a government’s request or tender, the government becomes the first owner of the copyright, unless there's a different agreement in place.
+   </p>
+   <p></p>
+   <p>
+    6. Section 17(dd): This clause applies to copyrightable works made on behalf of public undertakings. If a work is created at the direction of a public undertaking, that undertaking shall be the first owner of the copyright.
+   </p>
+   <p>
+    7. Section 17(dd) and Section 41: This pertains to works created for certain international organizations. If an international organization commissions a person to create a copyrightable work, that organization becomes the first owner of the copyright.
+   </p>
+   <p></p>
+   <p>
+    In summary, Section 17 of the Copyright Act, 1957, is a legal tapestry that navigates the complex terrain of copyright ownership, considering various scenarios involving commissioned work, employment, public representation, and government involvement. It balances the scales between creators and entities that provide the platform for creative expression, 
+    ensuring a fair distribution of ownership rights while recognizing the roles played by different parties in the creative process.
+   </p>
 </body>
 </html>
