--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -52,9 +52,7 @@
    <img src="./copyright/history of copyright in india.png" class="history of copright in india">
    <br></br>
    <p></p>
-   <p>
-    COPYRIGHT OWNERSHIP AND FIRST OWNERSHIP UNDER COPYRIGHT ACT, 1957
-   </p>
+   <h4>COPYRIGHT OWNERSHIP AND FIRST OWNERSHIP UNDER COPYRIGHT ACT, 1957</h4>
    <p></p>
    <p>
     Copyright is a unique legal right that is automatically granted upon the creation of a work. It is closely tied to the creator of the work and differs from trademarks, where the originator might not be known. The author’s role is significant in copyright, mentioned during registration and enforcement.
