--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -77,7 +77,8 @@
     5. Work Created by Contract: If a person commissions any work through a contract, that person becomes the first owner for the purpose of the contract. The author remains the first owner for all other purposes.
    </p>
    <p>
-    6. Work Created by Employee: If a work is created by an employee during employment, the employer is the first owner. Disputes might arise regarding when the work was created "in the course of" employment.
+    6. Work Created by Employee: If a work is created by an employee during employment, the employer is the first owner. Disputes might arise regarding when the work was created 
+    “in the course of” employment.
    </p>
    <p>
     7. Work Created by Partner: Work created by a partner during business operations becomes owned by the partnership.
