--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -93,9 +93,7 @@
     10. Speech Delivered in Public: The speaker is the first owner, regardless of employment or arrangement by another.
    </p>
    <p></p>
-   <p>
-    Importance of Documentation:
-   </p>
+   <h4>Importance of Documentation</h4>
    <p></p>
    <ul>
     <li>Written assignments are crucial to transfer copyright ownership from the author.</li>
