--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -40,3 +40,15 @@
     </nav>
 </body>
 </html>
+<h1>KFC’s 7 secret spices:</h1>
+<p></p>
+<ul>
+  <li>Trade Secrets: Trade secrets are confidential information that gives a company a competitive advantage. This can include things like formulas, processes, and customer lists. Companies can protect their trade secrets through non-disclosure agreements and other legal means.</li>
+  <li>KFC (Kentucky Fried Chicken) is an American fast-food restaurant chain that specializes in fried chicken.</li>
+  <li>The company was founded by Colonel Harland Sanders in 1952 and is headquartered in Louisville, Kentucky </li>
+  <li>The original recipe for KFC’s fried chicken contains a blend of 11 herbs and spices, which are kept secret to this day. The secrecy that surrounds the exact composition of the “7 spice blend” makes it truly intriguing. </li>
+  <li>The recipe is kept so confidential , that it is divided into separate parts. Different suppliers produce each part of the recipe independently and only top executives of family members of the company are aware of the complete recipe. This is to ensure that no single person has access to the complete recipe. </li>
+  <li>This makes the 7 spices one of the most sought after trade secrets in the world. The trade secret aspect has been leveraged rightly by the company in marketing to create a buzz and curiosity amoung customers. This hype behind this heavily guarded recipe aids in an increase in their sales year after year and helps them maintain their status as an iconic fried chicken brand around the worlds. </li>
+  <li>Fun fact: they guard their recipes to an extent where they have secret vaults at Louisville headquarters, with 11 separate vials that contain each one of the ingredient. Only one person in the worlds knows the combination to the safe which is protected by armed guards. SO SECRETIVE!!!!</li>
+</ul>
+<p></p>
