--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -53,5 +53,5 @@
   <li>Fun fact: they guard their recipes to an extent where they have secret vaults at Louisville headquarters, with 11 separate vials that contain each one of the ingredient. Only one person in the worlds knows the combination to the safe which is protected by armed guards. SO SECRETIVE!!!!</li>
 </ul>
 <p></p>
-<img src="./kfc.jpeg" class="kfc"
+<img src="./kfc.jpeg" class="kfc">
 
