added: lawnotes and trademark

--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -40,6 +40,7 @@
             </button>
             <ul class="dropdown-menu">
               <li><a class="text-decoration-none" href="/Pages/copright.html">Copyright</a></li>
+              <li><a class="text-decoration-none" href="/Pages/Trademark.html">Trademark</a></li>
             </ul>
           </div> 
           <li><a class="text-decoration-none" href="/Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
